--- a/HDWETLEntity.Poco/HDWETLEntity.Poco.csproj
+++ b/HDWETLEntity.Poco/HDWETLEntity.Poco.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{1C143BF4-A34F-45D7-94E6-27C4B8B0031A}</ProjectGuid>
+    <ProjectGuid>{AE486C15-9505-455D-BDEC-8B29792F9639}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>HDWETLEntity.EF</RootNamespace>
-    <AssemblyName>HDWETLEntity.EF</AssemblyName>
+    <RootNamespace>HDWETLEntity.Poco</RootNamespace>
+    <AssemblyName>HDWETLEntity.Poco</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
@@ -31,12 +31,6 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
-      <HintPath>..\packages\EntityFramework.6.2.0\lib\net45\EntityFramework.dll</HintPath>
-    </Reference>
-    <Reference Include="EntityFramework.SqlServer, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
-      <HintPath>..\packages\EntityFramework.6.2.0\lib\net45\EntityFramework.SqlServer.dll</HintPath>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
@@ -48,28 +42,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="HDWETLContext.cs" />
-    <Compile Include="Migrations\201908190218190_Scheduling.cs" />
-    <Compile Include="Migrations\201908190218190_Scheduling.Designer.cs">
-      <DependentUpon>201908190218190_Scheduling.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\Configuration.cs" />
+    <Compile Include="Models\ETLSchedule.cs" />
+    <Compile Include="Models\ETLScheduleLog.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="App.config" />
-    <None Include="packages.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\HDWETLEntity.Poco\HDWETLEntity.Poco.csproj">
-      <Project>{ae486c15-9505-455d-bdec-8b29792f9639}</Project>
-      <Name>HDWETLEntity.Poco</Name>
-    </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
-    <EmbeddedResource Include="Migrations\201908190218190_Scheduling.resx">
-      <DependentUpon>201908190218190_Scheduling.cs</DependentUpon>
-    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
